Added LogCat debug messages, day counting and file reading/writing now work correctly. Working on AlarmManager.

--- a/app/src/main/res/layout/activity_calendar_view.xml
+++ b/app/src/main/res/layout/activity_calendar_view.xml
@@ -23,7 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/selectMonthTextView"
         android:layout_centerHorizontal="true"
-        android:prompt="@string/months_prompt" />
+        android:prompt="@string/months_prompt"
+        android:entries="@array/months"/>
 
     <TextView
         android:id="@+id/daysInUSAMessageTextView"
