Some small changes before release 1.1.0 on Google Play: "View Calendar" button is now invisible to avoid crashes, version code is 2, and only portrait view is supported.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,6 +68,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="34dp"
         android:onClick="viewCalendar"
-        android:text="@string/view_calendar_button" />
+        android:text="@string/view_calendar_button"
+        android:clickable="false"
+        android:visibility="invisible" />
 
 </RelativeLayout>
