"Login", "Logout", and "Create Account" are now functional. Login and create account use dialogues (smaller popup windows). Still work to do on GUI. Cloud storage for user's data not yet functional.

--- a/app/src/main/res/layout/activity_calendar_view.xml
+++ b/app/src/main/res/layout/activity_calendar_view.xml
@@ -27,7 +27,8 @@
             android:id="@+id/selectMonthSpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:prompt="@string/months_prompt" />
+            android:prompt="@string/months_prompt"
+            android:gravity="center" />
 
         <ImageButton
             android:layout_width="wrap_content"
