--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.caniborrowyourphone.usa.MainActivity" >
 
@@ -23,7 +20,8 @@
         android:layout_below="@+id/headerTextView"
         android:layout_centerHorizontal="true"
         android:text="@string/num_days_text_view"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:textColor="@color/usaflagred" />
 
     <TextView
         android:id="@+id/currentlyInTextView"
@@ -83,22 +81,35 @@
             android:id="@+id/settingsButton"
             android:layout_width="144dp"
             android:layout_height="48dp"
-            android:layout_centerHorizontal="true"
             android:onClick="viewSettings"
             android:text="@string/settings"
             android:clickable="true"
-            android:layout_marginRight="10dp" />
+            android:layout_marginRight="10dp"
+            android:background="@color/usaflagred"
+            android:textColor="@color/white" />
 
         <Button
             android:id="@+id/viewCalendarButton"
             android:layout_width="144dp"
             android:layout_height="48dp"
-            android:layout_centerHorizontal="true"
             android:onClick="viewCalendar"
             android:text="@string/calendar"
             android:clickable="true"
-            android:layout_marginLeft="10dp" />
+            android:layout_marginLeft="10dp"
+            android:background="@color/usaflagred"
+            android:textColor="@color/white" />
 
         </LinearLayout>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text=""
+        android:id="@+id/loggedInAsTextView"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@color/usaflagrevisedblue"
+        android:gravity="center" />
 
 </RelativeLayout>
